--- a/sobremim.html
+++ b/sobremim.html
@@ -9,7 +9,7 @@
     <title>Sobre Mim</title>
 </head>
 
-<body background="./Fotos/fundo.gif">
+<body>
     <header class="cabecalho">
         <nav class="cabecalho__menu">
             <a class="cabecalho__menu__link" href="index.html">Home</a>
