--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Portfolio</title>
 </head>
 
-<body>
+<body background="./Fotos/fundo.gif">
     <header class="cabecalho">
         <nav class="cabecalho__menu">
             <a class="cabecalho__menu__link" href="index.html">Home</a>
