--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./estilos/estilo.css">
+    <link rel="stylesheet" href="./estilos/estilo copy.css">
 
     <title>Portfolio</title>
 </head>
@@ -15,7 +15,7 @@
         <nav class="cabecalho__menu">
             <a class="cabecalho__menu__link" href="index.html">Home</a>
             <a class="cabecalho__menu__link" href="sobremim.html">Sobre mim</a>
-            <a class="cabecalho__menu__link" href="">Certificações</a>
+            <a class="cabecalho__menu__link" href="certificados.html">Certificações</a>
         </nav>
     </header>
 
