--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./estilos/estilo copy.css">
 
     <title>Portfolio</title>
+	<link type="image/png" sizes="32x32" rel="icon" href="./Fotos/icons-cubo.png">
 </head>
 
 <body background="./Fotos/fundo.gif">
