--- a/sobremim.html
+++ b/sobremim.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./estilos/estilo copy.css">
     <title>Sobre Mim</title>
+    <link type="image/png" sizes="32x32" rel="icon" href="./Fotos/icons-cubo.png">
 </head>
 
 <body background="./Fotos/fundo.gif">
