--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </h1>
 
             <p class="apresentacao__textos__paragrafo">Olá! Sou Israel Madeira, estudante de  <strong class="titulo2">Cibersegurança e com foco em Red Team.</strong>
-                Ajudo pequenos negócios e designers a colocarem em prática a defesa cibernetica em seus sites.
+                Ajudo pequenos negócios e desenvolvedores a colocarem em prática a segurança cibernetica em seus sites.
                 Vamos conversar?</p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Acesse minhas redes!</h2>
