--- a/certificados.html
+++ b/certificados.html
@@ -22,19 +22,24 @@
 
 
     <main class="apresentacao">
+
+
         <section class="apresentacao__textos">
-            <div class="ehe">
-                <img src="./Fotos/ehe.png" alt="">
-            </div>
 
-            <div class="lgpd">
-                <img src="./Fotos/LGPD.png" alt="Lei geral de proteção de dados">
-            </div>
+            <div class="divcertmae">
+                <div class="ehe">
+                    <img src="./Fotos/ehe.png" alt="">
+                </div>
 
-            <div class="ONE">
-                <img src="./Fotos/GitHub challenge decodificador.png" alt="badged ONE">
-            </div>
+                <div class="lgpd">
+                    <img src="./Fotos/LGPD.png" alt="Lei geral de proteção de dados">
+                </div>
 
+                <div class="ONE">
+                    <img src="./Fotos/GitHub challenge decodificador.png" alt="badged ONE">
+                </div>
+
+            </div>
         </section>
 
     </main>
