--- a/certificados.html
+++ b/certificados.html
@@ -39,18 +39,22 @@
                     <img src="./Fotos/GitHub challenge decodificador.png" alt="badged ONE">
                 </div>
 
+                <div class="googlecyber">
+                    <img src="./Fotos/google-cybersecurity-certificate.png" alt="">
+                </div>
+
             </div>
         </section>
 
     </main>
 
 
-    
+    <footer class="rodape">
+        <p>© Desenvolvido por Israel Madeira</p>
+    </footer>
 
 </body>
 
-<footer class="rodape">
-    <p>© Desenvolvido por Israel Madeira</p>
-</footer>
+
 
 </html>
