--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@ Sou desenvolvedor Full Stack com foco em segurança, criação de aplicações w
 
 <div class="skills">
 
-<span>HTML</span>
-<span>CSS</span>
+<span>HTML / CSS</span>
+<span>Java</span>
 <span>JavaScript</span>
 <span>Python</span>
 <span>Linux</span>
@@ -118,8 +118,8 @@ Sou desenvolvedor Full Stack com foco em segurança, criação de aplicações w
 
 <h2>Contato</h2>
 
-<a href="mailto:israelmadeira20@gmail.com" class="btn">
-Enviar Email
+<a href="https://www.linkedin.com/in/israel-madeira-0a9602165/" class="btn">
+Entrar em contato
 </a>
 
 </section>
@@ -134,7 +134,7 @@ Enviar Email
 
 </footer>
 
-<script src="assets/js/script.js"></script>
+<script src="Scripts/script.js"></script>
 
 </body>
 </html>
